# TelegramDriveFrappe

./: .gitignore  FRAPPE_CLONE_PLAN.md  MOUNTING_GUIDE.md  README.md
telegram_drive/: MANIFEST.in  README.md  pyproject.toml
telegram_drive/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
telegram_drive/frontend/src/: App.jsx  api.js  index.css
telegram_drive/frontend/src/components/: AuthScreen.jsx  CloudNotes.jsx  FileManager.jsx  PortalManager.jsx
telegram_drive/telegram_drive/: hooks.py  install.py  modules.txt  permissions.py
telegram_drive/telegram_drive/api/: auth.py  files.py  folders.py  notes.py  permissions.py  portal.py  settings.py  transfers.py
telegram_drive/telegram_drive/config/: desktop.py
telegram_drive/telegram_drive/doctype/telegram_drive_cloud_note/: telegram_drive_cloud_note.json  telegram_drive_cloud_note.py
telegram_drive/telegram_drive/doctype/telegram_drive_file/: telegram_drive_file.json  telegram_drive_file.py
telegram_drive/telegram_drive/doctype/telegram_drive_folder/: telegram_drive_folder.json  telegram_drive_folder.py
telegram_drive/telegram_drive/doctype/telegram_drive_owner/: telegram_drive_owner.json
telegram_drive/telegram_drive/doctype/telegram_drive_portal_session/: telegram_drive_portal_session.json
telegram_drive/telegram_drive/scripts/: import_sqlite.py
telegram_drive/telegram_drive/services/: activity.py  progress.py  security.py  telegram_service.py  temp_files.py
telegram_drive/telegram_drive/www/: telegram-drive.py
(+24 files in other folders)
